--- a/sources/vietbike/src/styles/_animations.scss
+++ b/sources/vietbike/src/styles/_animations.scss
@@ -10,7 +10,22 @@
 	}
 }
 
+@keyframes pulse {
+	0% {
+		transform: scale(0.95);
+		box-shadow: 255 255 255 0 rgba(255, 255, 255, 0.7);
+	}
 
+	70% {
+		transform: scale(1);
+		box-shadow: 255 255 255 10px rgba(255, 255, 255, 0);
+	}
+
+	100% {
+		transform: scale(0.95);
+		box-shadow: 255 255 255 0 rgba(255, 255, 255, 0);
+	}
+}
 
 .img-spin {
 	animation-name: spin;
