--- a/sources/vietbike/src/styles/_base.scss
+++ b/sources/vietbike/src/styles/_base.scss
@@ -5,15 +5,14 @@ html {
 body {
 	height: 100%;
 	position: relative;
-  padding: 0;
+  	padding: 0;
 	margin: 0;
-	overflow: hidden;
 }
 
 html, body {
   font-family: 'Ubuntu', sans-serif;
-	color: #FFFFFF;
-	font-size: 12px;
+  color: #000;
+  font-size: 12px;
 	@media(min-width: 1440px) {
 		font-size: 15px;
 	}
